@@ -1,44 +1,65 @@
-## JavaFX
+# Tarea 2 Programación Orientada a Objetos
 
-Para esta fase de la tarea, hay que tener "JavaFX", por lo que se dejará una copia de la librería en este repositorio, en la carpeta `openjfx-24.0.1_windows-x64_bin-sdk`. Se recomienda dejar esta carpeta en alguna ubicación que prefiera. En nuestro caso, la dejaremos en la carpeta de descargas.
+Integrantes: Benjamin Arias Vega	202230007-8
 
-De todas formas, es muy importante que identifique dónde está la carpeta, y donde está la sub carpeta `\javafx-sdk-24.0.1\lib`, ya que aqui están los archivos .jar necesarios de la libería, y esta ubicación es primordial para los siguientes pasos, asi que se recomienda tenerla copiada en algún lugar.
+Joaquin Belmar		202330003-9
 
-## Ejecución en IntelliJ IDEA
 
-Para ejecutar desde este programa, tan solo hay que abrir la carpeta del repositorio clonado, y configurar el proyecto para que pueda usar JavaFX. Para esto, se deben hacer los siguientes pasos:
+Adjunto Link de Repositorio
 
-### Importar libería
+https://github.com/joaquinchinobelmar/tarea3POO
 
-1. Haz click en las opciones del programa, que está en la esquina izquierda superior (al presionar el ícono, se mostrará que esta menú se llama "File").
-2. Presionar la opción "Project Sructure".
-3. En la ventana, presionar la opción "Libraries".
-4. En "Libraries", presionar el ícono "+" para agregar una librería, se debe presionar que ésta es de "Java".
-5. Busca o pega la ubicación de la librería ya identificada anteriormente y seleccionala.
-6. Una vez que se vea en la lista de librerías la ubicación de "JavaFX", presiona "Apply"
+
+## Requisitos: C++ y QT
+
+Para todas las fases de esta tarea, hay que trabajar con C++ y QT, para lo que se recomienda usar el programa que nosotros usamos, [CLion](https://www.jetbrains.com/es-es/clion/). Para ejecutar QT en Clion, se deben seguir las siguientes instrucciones:
+
+1. Descargar [QT desde su página oficial](https://www.qt.io/download-qt-installer), se necesitará una cuenta.
+2. Ejecutar el instalador e instalar la última versión de QT, asegurando que se instala QTCreator.
+3. Al finalizar la instalación, se mostrará la ubicación donde se instaló QT, presione esa ubicación. Dentro de la carpeta, abra la carpeta con el número de la versión, y luego abra la carpeta de mingw_64. Copie esa dirección. Generalmente, estas ubicaciones se ven así:
+
+```bash
+  C:\Qt\6.9.1\mingw_64
+```
+4. Abra Clion.
+5. En caso que Clion no haya detectado a QT, vaya a File > Settings.
+6. Busque Build, Execution, Deployment > Toolchains
+7. Asegurese que Clion detecte MinGW.
+8. En Build, Execution, Deploymen, busque CMake.
+9. Asegurese que en Toolchain se use MinGW.
+10. Busque el espacio de CMake options.
+11. Ponga el siguiente argumento:
+```bash
+  -DCMAKE_PREFIX_PATH=<Ruta de la carpeta>
+```
+En nuestro caso, quedaría así:
+
+```bash
+  -DCMAKE_PREFIX_PATH=C:\Qt\6.9.1\mingw_64
+```
+12. Dele click en Apply, y cierre las opciones.
+
+Con todo verificado y configurado, ya está listo para ejecutar a través de Clion.
+
+## Ejecución en Clion con configuración de proyecto
+
+Para ejecutar desde este programa, tan solo hay que abrir la carpeta del repositorio clonado, y configurar el proyecto para que pueda usar QT. Para esto, se deben hacer los siguientes pasos (despúes de terminar la configuración anterior):
 
 ### Cambiar configuración del archivo principal
 
-1. Al lado izquierdo del ícono de Run, se encuentra el archivo se está corriendo (generalmente "Current File"), pulsa el nombre de ese archivo, y selecciona "Edit Configurations...".
-2. Si no hay configuraciones creadas, crea una con el boton "Add new...", y seleccionando la opción "Aplication".
-3. Selecciona la clase a ejecutar, en este caso, `PubSubsPatternSimulator`. Se puede añadir textualmente, o se puede buscar desde el mismo espacio de "Main class".
-4. Crea las opciones de Virtual Machine. Para esto, debes presionar las teclas "Alt + v".
-5. Una vez ya creado el espacio, debes poner lo siguiente como argumento, cambiando el espacio "UBICACION" con la dirección de la libería identificada anteriormente:
-```bash
-    --module-path "UBICACION" --add-modules javafx.controls,javafx.fxml,javafx.media
-```
-Es importante poner la ubicación exacta en el equipo de donde se encuentra, y dejar toda esta ubicación con los corchetes " ".
-
-6. Presiona "Apply".
-
-Y ya estará listo para ejercutar el archivo `PubSubsPatternSimulator` correctamente con JavaFX.
-
-## Requisito para publicador tipo GPS
-
-Para la etapa que el publicador de coordenadas GPS pueda tener datos de las ubicaciones, debe abrir un archivo txt que tenga el formato:
+1. En el lado superior derecho, haga click donde se ve "Tarea3_PubSubSimulator_Etapa1", y haga click en "Edit Configurations...".
+2. En la sección "Environment variables", haga click en el icono de la derecha de la barra (el que dice "Edit environment variables").
+3. Agregue una variable, que tenga de nombre "Name" el nombre de PATH.
+4. En la parte de Value, haga doble click, y agregue lo siguiente:
 
 ```bash
-  <tiempo> <posición x> <posición y>
+  <Ruta de la carpeta>\bin;%PATH%
 ```
+Ergo, debe ser la carpeta de mingw copiada anteriormente, con la subcarpeta \bin, sumandole ";%PATH%". En nuestro caso, queda así:
 
-Puede crearlo ud. donde prefiera, o usar el nuestro que tenemos de ejemplo en la carpeta fuente.
+```bash
+  C:\Qt\6.9.1\mingw_64\bin;%PATH%
+```
+5. Presiona "Apply" y "Ok".
+
+Y ya puede ejecutar el programa con QT con el boton "Run".
